# Redundant with the presence of requirements.txt, but included in case of preference for uv
[project]
name = "homeless-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bertopic>=0.17.4",
    "bitsandbytes>=0.49.2",
    "hdbscan>=0.8.43",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "praw>=7.8.1",
    "python-dotenv>=1.2.2",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "umap-learn>=0.5.12",
]
